5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4127/executions/1585_2894.log
== TEST (2019-03-21 11:23:08) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
jogo1 = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = (jogo1+45)

# Impressao do valor total:
print(total)
-- OUTPUT:
46.23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:23:15) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
jogo1 = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = (jogo1+45)

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.218283
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
46.23
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
401.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
124032.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:25:51) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
jogo1 = float(input("Qual o valor unitario do jogo 1? "))
jogo2 = float(input("Qual o valor unitario do jogo 2? "))
jogo3 = float(input("Qual o valor unitario do jogo 3? "))
jogo4 = float(input("Qual o valor unitario do jogo 4? "))
jogo5 = float(input("Qual o valor unitario do jogo 5? "))
jogo6 = float(input("Qual o valor unitario do jogo 6? "))
jogo7 = float(input("Qual o valor unitario do jogo 7? "))
jogo8 = float(input("Qual o valor unitario do jogo 8? "))
# Calculo do valor a ser pago, incluindo o frete:
total = (jogo1 + jogo2 + jogo3 + jogo4 + jogo5 + jogo6 + jogo7 + jogo8 + 45)

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.192483
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/2894/main.py", line 6, in <module>
    jogo2 = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:25:53) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
jogo1 = float(input("Qual o valor unitario do jogo 1? "))
jogo2 = float(input("Qual o valor unitario do jogo 2? "))
jogo3 = float(input("Qual o valor unitario do jogo 3? "))
jogo4 = float(input("Qual o valor unitario do jogo 4? "))
jogo5 = float(input("Qual o valor unitario do jogo 5? "))
jogo6 = float(input("Qual o valor unitario do jogo 6? "))
jogo7 = float(input("Qual o valor unitario do jogo 7? "))
jogo8 = float(input("Qual o valor unitario do jogo 8? "))
# Calculo do valor a ser pago, incluindo o frete:
total = (jogo1 + jogo2 + jogo3 + jogo4 + jogo5 + jogo6 + jogo7 + jogo8 + 45)

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.154016
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/2894/main.py", line 6, in <module>
    jogo2 = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:25:53) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
jogo1 = float(input("Qual o valor unitario do jogo 1? "))
jogo2 = float(input("Qual o valor unitario do jogo 2? "))
jogo3 = float(input("Qual o valor unitario do jogo 3? "))
jogo4 = float(input("Qual o valor unitario do jogo 4? "))
jogo5 = float(input("Qual o valor unitario do jogo 5? "))
jogo6 = float(input("Qual o valor unitario do jogo 6? "))
jogo7 = float(input("Qual o valor unitario do jogo 7? "))
jogo8 = float(input("Qual o valor unitario do jogo 8? "))
# Calculo do valor a ser pago, incluindo o frete:
total = (jogo1 + jogo2 + jogo3 + jogo4 + jogo5 + jogo6 + jogo7 + jogo8 + 45)

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    jogo2 = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:28:12) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var1 = float(input("Qual o valor unitario do jogo 1? "))
var2 = float(input("Qual o valor unitario do jogo 2? "))
var3 = float(input("Qual o valor unitario do jogo 3? "))
var4 = float(input("Qual o valor unitario do jogo 4? "))
var5 = float(input("Qual o valor unitario do jogo 5? "))
var6 = float(input("Qual o valor unitario do jogo 6? "))
var7 = float(input("Qual o valor unitario do jogo 7? "))
var8 = float(input("Qual o valor unitario do jogo 8? "))
# Calculo do valor a ser pago, incluindo o frete:
total = (var1 + var2 + var3 + var4 + var5 + var6 + var7 + var8 + 45)

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.148192
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/2894/main.py", line 6, in <module>
    var2 = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:28:13) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var1 = float(input("Qual o valor unitario do jogo 1? "))
var2 = float(input("Qual o valor unitario do jogo 2? "))
var3 = float(input("Qual o valor unitario do jogo 3? "))
var4 = float(input("Qual o valor unitario do jogo 4? "))
var5 = float(input("Qual o valor unitario do jogo 5? "))
var6 = float(input("Qual o valor unitario do jogo 6? "))
var7 = float(input("Qual o valor unitario do jogo 7? "))
var8 = float(input("Qual o valor unitario do jogo 8? "))
# Calculo do valor a ser pago, incluindo o frete:
total = (var1 + var2 + var3 + var4 + var5 + var6 + var7 + var8 + 45)

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    var2 = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:28:26) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var1 = float(input("Qual o valor unitario do jogo 1? "))
var2 = float(input("Qual o valor unitario do jogo 2? "))
var3 = float(input("Qual o valor unitario do jogo 3? "))
var4 = float(input("Qual o valor unitario do jogo 4? "))
var5 = float(input("Qual o valor unitario do jogo 5? "))
var6 = float(input("Qual o valor unitario do jogo 6? "))
var7 = float(input("Qual o valor unitario do jogo 7? "))
var8 = float(input("Qual o valor unitario do jogo 8? "))
# Calculo do valor a ser pago, incluindo o frete:
total = (var1 + var2 + var3 + var4 + var5 + var6 + var7 + var8)

# Impressao do valor total:
print(total + 45)
-- EXECUTION TIME:
0.215822
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/2894/main.py", line 6, in <module>
    var2 = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:29:51) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var1 = float(input("o valor unitario do jogo 1: "))
var2 = float(input("o valor unitario do jogo 2: "))
var3 = float(input("o valor unitario do jogo 3: "))
var4 = float(input("o valor unitario do jogo 4: "))
var5 = float(input("o valor unitario do jogo 5: "))
var6 = float(input("o valor unitario do jogo 6: "))
var7 = float(input("o valor unitario do jogo 7: "))
var8 = float(input("o valor unitario do jogo 8: "))
# Calculo do valor a ser pago, incluindo o frete:
total = (var1 + var2 + var3 + var4 + var5 + var6 + var7 + var8)

# Impressao do valor total:
print(total + 45)
-- EXECUTION TIME:
0.186837
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/2894/main.py", line 6, in <module>
    var2 = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:29:52) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var1 = float(input("o valor unitario do jogo 1: "))
var2 = float(input("o valor unitario do jogo 2: "))
var3 = float(input("o valor unitario do jogo 3: "))
var4 = float(input("o valor unitario do jogo 4: "))
var5 = float(input("o valor unitario do jogo 5: "))
var6 = float(input("o valor unitario do jogo 6: "))
var7 = float(input("o valor unitario do jogo 7: "))
var8 = float(input("o valor unitario do jogo 8: "))
# Calculo do valor a ser pago, incluindo o frete:
total = (var1 + var2 + var3 + var4 + var5 + var6 + var7 + var8)

# Impressao do valor total:
print(total + 45)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    var2 = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:30:35) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var1 = float(input("o valor unitario do jogo 1: "))
var2 = float(input("o valor unitario do jogo 2: "))
var3 = float(input("o valor unitario do jogo 3: "))
var4 = float(input("o valor unitario do jogo 4: "))
var5 = float(input("o valor unitario do jogo 5: "))
var6 = float(input("o valor unitario do jogo 6: "))
var7 = float(input("o valor unitario do jogo 7: "))
var8 = float(input("o valor unitario do jogo 8: "))
# Calculo do valor a ser pago, incluindo o frete:
total = (var1 + var2 + var3 + var4 + var5 + var6 + var7 + var8)

# Impressao do valor total:
print(total + 45)
-- EXECUTION TIME:
0.196915
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/2894/main.py", line 6, in <module>
    var2 = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:30:52) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var1 = float(input("o valor unitario do jogo 1: "))
var2 = float(input("o valor unitario do jogo 2: "))
var3 = float(input("o valor unitario do jogo 3: "))
var4 = float(input("o valor unitario do jogo 4: "))
var5 = float(input("o valor unitario do jogo 5: "))
var6 = float(input("o valor unitario do jogo 6: "))
var7 = float(input("o valor unitario do jogo 7: "))
var8 = float(input("o valor unitario do jogo 8: "))
# Calculo do valor a ser pago, incluindo o frete:
total = (var1 + var2 + var3 + var4 + var5 + var6 + var7 + var8 + 45)

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.162012
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/2894/main.py", line 6, in <module>
    var2 = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:30:59) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var1 = float(input("o valor unitario do jogo 1: "))
var2 = float(input("o valor unitario do jogo 2: "))
var3 = float(input("o valor unitario do jogo 3: "))
var4 = float(input("o valor unitario do jogo 4: "))
var5 = float(input("o valor unitario do jogo 5: "))
var6 = float(input("o valor unitario do jogo 6: "))
var7 = float(input("o valor unitario do jogo 7: "))
var8 = float(input("o valor unitario do jogo 8: "))
# Calculo do valor a ser pago, incluindo o frete:
total = (var1 + var2 + var3 + var4 + var5 + var6 + var7 + var8 + 45)

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.159123
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/2894/main.py", line 6, in <module>
    var2 = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:31:31) 
-- CODE:
var1 = float(input("o valor unitario do jogo 1: "))
var2 = float(input("o valor unitario do jogo 2: "))
var3 = float(input("o valor unitario do jogo 3: "))
var4 = float(input("o valor unitario do jogo 4: "))
var5 = float(input("o valor unitario do jogo 5: "))
var6 = float(input("o valor unitario do jogo 6: "))
var7 = float(input("o valor unitario do jogo 7: "))
var8 = float(input("o valor unitario do jogo 8: "))

total = (var1 + var2 + var3 + var4 + var5 + var6 + var7 + var8 + 45)


print(total)
-- EXECUTION TIME:
0.184153
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/2894/main.py", line 2, in <module>
    var2 = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:31:52) 
-- CODE:
var1 = float(input("o valor unitario do jogo 1: "))
var2 = float(input("o valor unitario do jogo 2: "))
var3 = float(input("o valor unitario do jogo 3: "))
var4 = float(input("o valor unitario do jogo 4: "))
var5 = float(input("o valor unitario do jogo 5: "))
var6 = float(input("o valor unitario do jogo 6: "))
var7 = float(input("o valor unitario do jogo 7: "))
var8 = float(input("o valor unitario do jogo 8: "))

total = (var1 + var2 + var3 + var4 + var5 + var6 + var7 + var8 + 45)


print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var2 = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:32:13) 
-- CODE:
var1 = float(input("o valor unitario do jogo 1: "))
var2 = float(input("o valor unitario do jogo 2: "))
var3 = float(input("o valor unitario do jogo 3: "))
var4 = float(input("o valor unitario do jogo 4: "))
var5 = float(input("o valor unitario do jogo 5: "))
var6 = float(input("o valor unitario do jogo 6: "))
var7 = float(input("o valor unitario do jogo 7: "))
var8 = float(input("o valor unitario do jogo 8: "))

total = (var1 + var2 + var3 + var4 + var5 + var6 + var7 + var8 + 45)


print(total)
-- EXECUTION TIME:
0.150784
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/2894/main.py", line 2, in <module>
    var2 = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:32:18) 
-- CODE:
var1 = float(input("o valor unitario do jogo 1: "))
var2 = float(input("o valor unitario do jogo 2: "))
var3 = float(input("o valor unitario do jogo 3: "))
var4 = float(input("o valor unitario do jogo 4: "))
var5 = float(input("o valor unitario do jogo 5: "))
var6 = float(input("o valor unitario do jogo 6: "))
var7 = float(input("o valor unitario do jogo 7: "))
var8 = float(input("o valor unitario do jogo 8: "))

total = (var1 + var2 + var3 + var4 + var5 + var6 + var7 + var8 + 45)


print(total)
-- EXECUTION TIME:
0.238345
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/2894/main.py", line 2, in <module>
    var2 = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:33:11) 
-- CODE:
var1 = float(input("o valor unitario do jogo 1: "))
var2 = float(input("o valor unitario do jogo 2: "))
var3 = float(input("o valor unitario do jogo 3: "))
var4 = float(input("o valor unitario do jogo 4: "))
var5 = float(input("o valor unitario do jogo 5: "))
var6 = float(input("o valor unitario do jogo 6: "))
var7 = float(input("o valor unitario do jogo 7: "))
var8 = float(input("o valor unitario do jogo 8: "))

total = (var1 + var2 + var3 + var4 + var5 + var6 + var7 + var8 + 45)


print(total)
-- EXECUTION TIME:
0.211579
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/2894/main.py", line 2, in <module>
    var2 = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:34:34) 
-- CODE:
var1 = float(input("o valor unitario dos jogos: )
						 
total= (var1*8)						 


print(total)
-- EXECUTION TIME:
0.179248
-- ERROR:
  File "/home/codebench/codes/1585/2894/main.py", line 1
    var1 = float(input("o valor unitario dos jogos: )
                                                    ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:34:35) 
-- CODE:
var1 = float(input("o valor unitario dos jogos: )
						 
total= (var1*8)						 


print(total)
-- ERROR:
File "XXXX", line 1
    var1 = float(input("o valor unitario dos jogos: )
                                                    ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:34:56) 
-- CODE:
var1 = float(input("o valor unitario dos jogos: ")
						 
total= (var1*8 + 45)						 


print(total)
-- EXECUTION TIME:
0.162268
-- ERROR:
  File "/home/codebench/codes/1585/2894/main.py", line 3
    total= (var1*8 + 45)						 
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:35:00) 
-- CODE:
var1 = float(input("o valor unitario dos jogos: ")
						 
total= (var1*8 + 45)						 


print(total)
-- ERROR:
File "XXXX", line 3
    total= (var1*8 + 45)						 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:35:29) 
-- CODE:
var1 = float(input("o valor unitario dos jogos: "))
						 
total= (var1*8 + 45)						 


print(total)
-- EXECUTION TIME:
0.145671
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
